--- a/ffexplore.yml
+++ b/ffexplore.yml
@@ -3,67 +3,66 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - ca-certificates=2020.6.20=hecda079_0
-  - certifi=2020.6.20=py38h32f6830_0
-  - colorama=0.4.3=py_0
-  - cycler=0.10.0=py_2
-  - decorator=4.4.2=py_0
-  - entrypoints=0.3=py38h32f6830_1001
-  - freetype=2.10.2=hd328e21_0
-  - icc_rt=2019.0.0=h0cc432a_1
-  - icu=64.2=he025d50_1
-  - intel-openmp=2020.1=216
-  - ipykernel=5.3.1=py38h5ca1d4c_0
-  - ipython=7.16.1=py38h23f93f0_0
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.17.1=py38h32f6830_0
-  - jpeg=9d=he774522_0
-  - jupyter_client=6.1.5=py_0
-  - jupyter_core=4.6.3=py38h32f6830_1
-  - kiwisolver=1.2.0=py38heaebd3c_0
-  - libblas=3.8.0=16_mkl
-  - libcblas=3.8.0=16_mkl
-  - libclang=9.0.1=default_hf44288c_0
-  - liblapack=3.8.0=16_mkl
-  - libpng=1.6.37=hfe6a214_1
-  - libsodium=1.0.17=h2fa13f4_0
-  - matplotlib=3.2.2=1
-  - matplotlib-base=3.2.2=py38hbe5506b_1
-  - mkl=2020.1=216
-  - numpy=1.18.5=py38h72c728b_0
-  - openssl=1.1.1g=he774522_0
-  - pandas=1.0.5=py38he6e81aa_0
-  - parso=0.7.0=pyh9f0ad1d_0
-  - patsy=0.5.1=py_0
-  - pickleshare=0.7.5=py38h32f6830_1001
-  - pip=20.1.1=py_1
-  - prompt-toolkit=3.0.5=py_1
-  - pygments=2.6.1=py_0
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyqt=5.12.3=py38h7ae7562_3
-  - python=3.8.3=cpython_h5fd99cc_0
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.8=1_cp38
-  - pytz=2020.1=pyh9f0ad1d_0
-  - pywin32=227=py38hfa6e2cd_0
-  - pyzmq=19.0.1=py38h77b9d75_0
-  - qt=5.12.5=h7ef1ec2_0
-  - scipy=1.3.2=py38h582fac2_0
-  - seaborn=0.10.1=1
-  - seaborn-base=0.10.1=py_1
-  - setuptools=49.1.0=py38h32f6830_0
-  - six=1.15.0=pyh9f0ad1d_0
-  - sqlite=3.32.3=he774522_0
-  - statsmodels=0.11.1=py38h1e8a9f7_2
-  - tornado=6.0.4=py38hfa6e2cd_0
-  - traitlets=4.3.3=py38h32f6830_1
-  - vc=14.1=h869be7e_1
-  - vs2015_runtime=14.16.27012=h30e32a0_2
-  - wcwidth=0.2.5=pyh9f0ad1d_0
-  - wheel=0.34.2=py_1
-  - wincertstore=0.2=py38_1003
-  - zeromq=4.3.2=h6538335_2
-  - zlib=1.2.11=h2fa13f4_1006
+  - backcall=0.2.0
+  - ca-certificates=2020.6.20
+  - certifi=2020.6.20
+  - colorama=0.4.3
+  - cycler=0.10.0
+  - decorator=4.4.2
+  - entrypoints=0.3
+  - freetype=2.10.2
+  - icc_rt=2019.0.0
+  - icu=64.2
+  - intel-openmp=2020.1
+  - ipykernel=5.3.1
+  - ipython=7.16.1
+  - ipython_genutils=0.2.0
+  - jedi=0.17.1
+  - jpeg=9d
+  - jupyter_client=6.1.5
+  - jupyter_core=4.6.3
+  - kiwisolver=1.2.0
+  - libblas=3.8.0
+  - libcblas=3.8.0
+  - libclang=9.0.1
+  - liblapack=3.8.0
+  - libpng=1.6.37
+  - libsodium=1.0.17
+  - matplotlib=3.2.2
+  - matplotlib-base=3.2.2
+  - mkl=2020.1
+  - numpy=1.18.5
+  - openssl=1.1.1g
+  - pandas=1.0.5
+  - parso=0.7.0
+  - patsy=0.5.1
+  - pickleshare=0.7.5
+  - pip=20.1.1
+  - prompt-toolkit=3.0.5
+  - pygments=2.6.1
+  - pyparsing=2.4.7
+  - pyqt=5.12.3
+  - python=3.8.3
+  - python-dateutil=2.8.1
+  - python_abi=3.8
+  - pytz=2020.1
+  - pywin32=227
+  - pyzmq=19.0.1
+  - qt=5.12.5
+  - scipy=1.3.2
+  - seaborn=0.10.1
+  - seaborn-base=0.10.1
+  - setuptools=49.1.0
+  - six=1.15.0
+  - sqlite=3.32.3
+  - statsmodels=0.11.1
+  - tornado=6.0.4
+  - traitlets=4.3.3
+  - vc=14.1
+  - vs2015_runtime=14.16.27012
+  - wcwidth=0.2.5
+  - wheel=0.34.2
+  - wincertstore=0.2
+  - zeromq=4.3.2
+  - zlib=1.2.11
 prefix: F:\Anaconda3\envs\ffexplore
-
