--- a/ffexplore.yml
+++ b/ffexplore.yml
@@ -4,34 +4,33 @@ channels:
   - defaults
 dependencies:
   - backcall=0.2.0
+  - blas=1.0
   - ca-certificates=2020.6.20
   - certifi=2020.6.20
   - colorama=0.4.3
   - cycler=0.10.0
   - decorator=4.4.2
-  - entrypoints=0.3
+  - et_xmlfile=1.0.1
   - freetype=2.10.2
   - icc_rt=2019.0.0
-  - icu=64.2
+  - icu=58.2
   - intel-openmp=2020.1
-  - ipykernel=5.3.1
   - ipython=7.16.1
   - ipython_genutils=0.2.0
+  - jdcal=1.4.1
   - jedi=0.17.1
-  - jpeg=9d
-  - jupyter_client=6.1.5
-  - jupyter_core=4.6.3
+  - jpeg=9b
   - kiwisolver=1.2.0
-  - libblas=3.8.0
-  - libcblas=3.8.0
-  - libclang=9.0.1
-  - liblapack=3.8.0
   - libpng=1.6.37
-  - libsodium=1.0.17
   - matplotlib=3.2.2
   - matplotlib-base=3.2.2
   - mkl=2020.1
+  - mkl-service=2.3.0
+  - mkl_fft=1.1.0
+  - mkl_random=1.1.1
   - numpy=1.18.5
+  - numpy-base=1.18.5
+  - openpyxl=3.0.4
   - openssl=1.1.1g
   - pandas=1.0.5
   - parso=0.7.0
@@ -41,18 +40,17 @@ dependencies:
   - prompt-toolkit=3.0.5
   - pygments=2.6.1
   - pyparsing=2.4.7
-  - pyqt=5.12.3
-  - python=3.8.3
+  - pyqt=5.9.2
+  - python=3.7.7
   - python-dateutil=2.8.1
-  - python_abi=3.8
+  - python_abi=3.7
   - pytz=2020.1
-  - pywin32=227
-  - pyzmq=19.0.1
-  - qt=5.12.5
-  - scipy=1.3.2
+  - qt=5.9.7
+  - scipy=1.5.0
   - seaborn=0.10.1
   - seaborn-base=0.10.1
-  - setuptools=49.1.0
+  - setuptools=47.3.1
+  - sip=4.19.8
   - six=1.15.0
   - sqlite=3.32.3
   - statsmodels=0.11.1
@@ -63,6 +61,7 @@ dependencies:
   - wcwidth=0.2.5
   - wheel=0.34.2
   - wincertstore=0.2
-  - zeromq=4.3.2
   - zlib=1.2.11
+  - pip:
+    - toposort==1.5
 prefix: F:\Anaconda3\envs\ffexplore
