--- a/ffexplore.yml
+++ b/ffexplore.yml
@@ -38,6 +38,7 @@ dependencies:
   - parso=0.7.0
   - patsy=0.5.1
   - pickleshare=0.7.5
+  - pillow=7.2.0
   - pip=20.1.1
   - prompt-toolkit=3.0.5
   - pygments=2.6.1
