--- a/apply/.vscode/settings.json
+++ b/apply/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "F:\\Anaconda3\\envs\\gbr-wq\\python.exe"
+    "python.pythonPath": "F:\\Anaconda\\envs\\ffexplore\\python.exe"
 }
