Add environment file and edit README.md

--- a/ffexplore.yml
+++ b/ffexplore.yml
@@ -1,72 +1,158 @@
-name: ffexplore
+name: ffe_new
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - backcall=0.2.0
-  - blas=1.0
-  - ca-certificates=2020.6.20
-  - certifi=2020.6.20
-  - colorama=0.4.3
-  - cycler=0.10.0
-  - decorator=4.4.2
-  - et_xmlfile=1.0.1
-  - freetype=2.10.2
-  - icc_rt=2019.0.0
-  - icu=58.2
-  - intel-openmp=2020.1
-  - ipython=7.16.1
-  - ipython_genutils=0.2.0
-  - jdcal=1.4.1
-  - jedi=0.17.1
-  - jinja2=2.11.2
-  - jpeg=9b
-  - kiwisolver=1.2.0
-  - libpng=1.6.37
-  - markupsafe=1.1.1
-  - matplotlib=3.2.2
-  - matplotlib-base=3.2.2
-  - mkl=2020.1
-  - mkl-service=2.3.0
-  - mkl_fft=1.1.0
-  - mkl_random=1.1.1
-  - numpy=1.18.5
-  - numpy-base=1.18.5
-  - openpyxl=3.0.4
-  - openssl=1.1.1g
-  - pandas=1.0.5
-  - parso=0.7.0
-  - patsy=0.5.1
-  - pickleshare=0.7.5
-  - pillow=7.2.0
-  - pip=20.1.1
-  - prompt-toolkit=3.0.5
-  - pygments=2.6.1
-  - pyparsing=2.4.7
-  - pyqt=5.9.2
-  - python=3.7.7
-  - python-dateutil=2.8.1
-  - python_abi=3.7
-  - pytz=2020.1
-  - qt=5.9.7
-  - scipy=1.5.0
-  - seaborn=0.10.1
-  - seaborn-base=0.10.1
-  - setuptools=47.3.1
-  - sip=4.19.8
-  - six=1.15.0
-  - sqlite=3.32.3
-  - statsmodels=0.11.1
-  - tornado=6.0.4
-  - traitlets=4.3.3
-  - vc=14.1
-  - vs2015_runtime=14.16.27012
-  - wcwidth=0.2.5
-  - wheel=0.34.2
-  - wincertstore=0.2
-  - zlib=1.2.11
+  - argon2-cffi=20.1.0=py39hb82d6ee_2
+  - async_generator=1.10=py_0
+  - attrs=20.3.0=pyhd3deb0d_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.1=py_0
+  - bleach=3.2.1=pyh9f0ad1d_0
+  - ca-certificates=2020.11.8=h5b45459_0
+  - certifi=2020.11.8=py39hcbf5309_0
+  - cffi=1.14.3=py39h50be354_1
+  - colorama=0.4.4=pyh9f0ad1d_0
+  - cycler=0.10.0=py_2
+  - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - freetype=2.10.4=h546665d_0
+  - icu=67.1=h33f27b4_0
+  - importlib-metadata=3.1.0=pyhd8ed1ab_0
+  - importlib_metadata=3.1.0=hd8ed1ab_0
+  - intel-openmp=2020.3=h57928b3_311
+  - ipykernel=5.3.4=py39he1a07ef_1
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.5.1=pyh9f0ad1d_1
+  - jedi=0.17.2=py39hcbf5309_1
+  - jinja2=2.11.2=pyh9f0ad1d_0
+  - jpeg=9d=h8ffe710_0
+  - jsonschema=3.2.0=py_2
+  - jupyter=1.0.0=py_2
+  - jupyter_client=6.1.7=py_0
+  - jupyter_console=6.2.0=py_0
+  - jupyter_core=4.7.0=py39hcbf5309_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - kiwisolver=1.3.1=py39h2e07f2f_0
+  - libblas=3.8.0=21_mkl
+  - libcblas=3.8.0=21_mkl
+  - libclang=10.0.1=default_hf44288c_1
+  - liblapack=3.8.0=21_mkl
+  - libpng=1.6.37=h1d00b33_2
+  - libsodium=1.0.18=h8d14728_1
+  - libtiff=4.1.0=hc10be44_6
+  - lz4-c=1.9.2=h62dcd97_2
+  - m2w64-gcc-libgfortran=5.3.0=6
+  - m2w64-gcc-libs=5.3.0=7
+  - m2w64-gcc-libs-core=5.3.0=7
+  - m2w64-gmp=6.1.0=2
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+  - markupsafe=1.1.1=py39ha3862ff_2
+  - matplotlib-base=3.3.3=py39h581301d_0
+  - mistune=0.8.4=py39hb82d6ee_1002
+  - mkl=2020.4=hb70f87d_311
+  - msys2-conda-epoch=20160418=1
+  - nbclient=0.5.1=py_0
+  - nbconvert=6.0.7=py39hcbf5309_3
+  - nbformat=5.0.8=py_0
+  - nest-asyncio=1.4.3=pyhd8ed1ab_0
+  - notebook=6.1.5=py39hcbf5309_0
+  - numpy=1.19.4=py39h6635163_1
+  - olefile=0.46=pyh9f0ad1d_1
+  - openssl=1.1.1h=he774522_0
+  - packaging=20.4=pyh9f0ad1d_0
+  - pandas=1.1.4=py39h2e25243_0
+  - pandoc=2.11.2=h8ffe710_0
+  - parso=0.7.1=pyh9f0ad1d_0
+  - patsy=0.5.1=py_0
+  - pickleshare=0.7.5=py_1003
+  - pillow=8.0.1=py39hbc3ea3a_0
+  - pip=20.2.4=py_0
+  - prometheus_client=0.9.0=pyhd3deb0d_0
+  - prompt-toolkit=3.0.8=pyha770c72_0
+  - prompt_toolkit=3.0.8=hd8ed1ab_0
+  - pycparser=2.20=pyh9f0ad1d_2
+  - pygments=2.7.2=py_0
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyqt=5.12.3=py39hb0d2dfa_4
+  - pyrsistent=0.17.3=py39hb82d6ee_1
+  - python=3.9.0=h408a966_4_cpython
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.9=1_cp39
+  - pytz=2020.4=pyhd8ed1ab_0
+  - pywinpty=0.5.7=py39hde42818_1
+  - qt=5.12.9=hb2cf2c5_0
+  - qtconsole=5.0.0=pyhd8ed1ab_0
+  - qtpy=1.9.0=py_0
+  - seaborn=0.11.0=h57928b3_1
+  - seaborn-base=0.11.0=pyhd8ed1ab_1
+  - send2trash=1.5.0=py_0
+  - setuptools=49.6.0=py39h467e6f4_2
+  - six=1.15.0=pyh9f0ad1d_0
+  - sqlite=3.33.0=he774522_1
+  - statsmodels=0.12.1=py39h5d4886f_1
+  - terminado=0.9.1=py39hcbf5309_1
+  - testpath=0.4.4=py_0
+  - tk=8.6.10=he774522_1
+  - tornado=6.1=py39hb82d6ee_0
+  - traitlets=5.0.5=py_0
+  - tzdata=2020d=h516909a_0
+  - vc=14.1=h869be7e_1
+  - vs2015_runtime=14.16.27012=h30e32a0_2
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - wheel=0.35.1=pyh9f0ad1d_0
+  - widgetsnbextension=3.5.1=py39hcbf5309_4
+  - wincertstore=0.2=py39hde42818_1005
+  - winpty=0.4.3=4
+  - xz=5.2.5=h62dcd97_1
+  - zeromq=4.3.3=h0e60522_3
+  - zipp=3.4.0=py_0
+  - zlib=1.2.11=h62dcd97_1010
+  - zstd=1.4.5=h1f3a1b7_2
   - pip:
-    - llvmlite==0.33.0
-    - numba==0.50.1
+    - arviz==0.10.0
+    - astroid==2.4.2
+    - atomicwrites==1.4.0
+    - cftime==1.3.0
+    - cython==0.29.21
+    - dill==0.3.3
+    - e==1.4.5
+    - et-xmlfile==1.0.1
+    - fastprogress==1.0.0
+    - iniconfig==1.1.1
+    - ipython-genutils==0.2.0
+    - isort==5.6.4
+    - jdcal==1.4.1
+    - joblib==0.17.0
+    - lazy-object-proxy==1.4.3
+    - mccabe==0.6.1
+    - mpmath==1.1.0
+    - netcdf4==1.5.5
+    - networkx==2.5
+    - pandocfilters==1.4.3
+    - pluggy==0.13.1
+    - py==1.9.0
+    - pylint==2.6.0
+    - pymc3==3.10.0
+    - pypiwin32==223
+    - pyqt5-sip==4.19.18
+    - pyqtchart==5.12
+    - pyqtwebengine==5.12.1
+    - pytest==6.1.2
+    - pywin32==300
+    - pyzmq==20.0.0
+    - salib==1.3.8.post0.dev62+g5f06ddb
+    - scikit-learn==0.23.2
+    - scipy==1.5.4
+    - sympy==1.7
+    - theano-pymc==1.0.11
+    - threadpoolctl==2.1.0
+    - toml==0.10.2
     - toposort==1.5
-prefix: F:\Anaconda3\envs\ffexplore
+    - typing-extensions==3.7.4.3
+    - webencodings==0.5.1
+    - wrapt==1.12.1
+    - xarray==0.16.2
+prefix: F:\Anaconda\envs\ffe_new
